--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,15 +5,15 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
 
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
-    - name: Install Azure CLI
-      run: |
-        curl -sL https://aka.ms/InstallAzureCLIDeb | sudo bash
-        az extension add --name azure-devops
+    # - name: Install Azure CLI
+    #   run: |
+    #     curl -sL https://aka.ms/InstallAzureCLIDeb | sudo bash
+    #     az extension add --name azure-devops
 
     - name: Login Azure
       uses: azure/login@v1
@@ -21,8 +21,11 @@ jobs:
         creds: '{"clientId":"${{ secrets.CLIENT_ID }}","clientSecret":"${{ secrets.CLIENT_SECRET }}","tenantId":"${{ secrets.TENANT_ID }}","subscriptionId":"${{ secrets.SUBSCRIPTION_ID }}"}'
         enable-AzPSSession: true 
 
-    - name: Run Azure PowerShell Script File
-      uses: azure/powershell@v1
-      with:
-        inlineScript: ./Untitled4.ps1
-        azPSVersion: "latest"
+    # - name: Run Azure PowerShell Script File
+    #   uses: azure/powershell@v1
+    #   with:
+    #     inlineScript: ./Untitled4.ps1
+    #     azPSVersion: "latest"
+    - name: run powershell script
+      run: ./Untitled4.ps1
+     
