--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
     - name: Install Azure CLI
       run: |
         curl -sL https://aka.ms/InstallAzureCLIDeb | sudo bash
-        az extension add --name azure-devops
+        # az extension add --name azure-devops
 
     - name: Login Azure
       uses: azure/login@v1
