--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
       uses: actions/checkout@v2
     - name: Install Azure CLI
       run: |
-        curl -sL https://aka.ms/InstallAzureCLIDeb /* | sudo bash */
+        curl -sL https://aka.ms/InstallAzureCLIDeb | sudo bash
         # az extension add --name azure-devops
 
     - name: Login Azure
